@@ -73,6 +73,7 @@ legith.fairplay@gmail.com
 Daniel Kluev <dan.kluev@gmail.com>
 Scott Scites <scott.scites@railcar88.com>
 Mickael Kerbrat <mickael.kerbrat@gmail.com>
+Phil Charlesworth <phil.charlesworth@physics.org>
 
 Erik gets a special mention for the contribution of the "Showcase".
 
