@@ -1,6 +1,9 @@
                     Changes made to Pyjamas since 0.7
                     ---------------------------------
 
+ * Add parsing of XML documents under pyjd on Windows (mshtml),
+   fixes Issue 481, contributed by Phil Charlesworth
+   
  * Add auto-build (file monitoring) option to pyjsbuild, contributed
    by Suzan Shakya.
 
